--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
 </head>
 
 <body>
-    
+    <header>
+        <h1>Klimabilanz365</h1>
+        <h2>Der CO2-Footprint</h2>
+        <img src="images/Logo-Klimabilanz365.png" alt="Bild Logo" width="500" />
+        <nav>
+            <ul>
+                <li><a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
+                <li><a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="link">
+        <nav>
+            <ul>
+                <li><a href="home.html">Homepage</a></li>
+                <li><a href="co2-emissionsdata.html">CO2-Emissionsdaten</a></li>
+                <li><a href="about.html">Über uns</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <main>
+        
+    </main>
+
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="privacy.html">Datenschutz</a></li>
+                <li><a href="imprint.html">Impressum</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
 </html>
