--- a/index.html
+++ b/index.html
@@ -1,48 +1,268 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
     <title>Co2-Footprint</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <header>
-        <h1>Klimabilanz365</h1>
-        <h2>Der CO2-Footprint</h2>
-        <img src="images/Logo-Klimabilanz365.png" alt="Bild Logo" width="500" />
-        <nav>
-            <ul>
-                <li><a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
-                <li><a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+    <header class="bg-success py-3 fixed-top">
+        <div class="container">
+            <nav id="firmenname">
+            <div class="row align-items-start">
+                <!-- Firemnname & Untertitel linksbündig oben -->
+                <div class="col">
+                    <h1 class="h3 mb-0">Klimabilanz365</h1>
+                    <h2 class="h6 text-muted">Der CO2-Footprint</h2>
+                </div>
+                <!-- Logo rechtsbündig oben; 
+                 img-fluid=Saklierung des Logo auf kleinen Bildschirmen -->
+                <div class="col-auto text-end">
+                    <img src="images/Logo-Klimabilanz365.png" class="img-fluid" style="max-width: 150px;"
+                        alt="Bild Logo" width="300" />
+                </div>
+            </div>
+            </nav>
+            
+            <nav id="logo" class="navbar">
+            <ul class="list-inline justify-content-center mx-auto">
+                <li class="list-inline-item"><a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
+                <li class="list-inline-item"><a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
+                <li class="list-inline-item"><a href="contact.html">Kontakt</a></li>
             </ul>
-        </nav>
+            </nav>
+        </div>
     </header>
 
-    <div class="link">
-        <nav>
-            <ul>
-                <li><a href="home.html">Homepage</a></li>
-                <li><a href="co2-emissionsdata.html">CO2-Emissionsdaten</a></li>
-                <li><a href="about.html">Über uns</a></li>
-            </ul>
+
+    <!-- Menü -->
+    <nav id="menu" class="bg-primary text-white position-fixed start-0 p-3 d-flex flex-column">
+        <button class="btn btn-light d-md-none mb-3" id="menuToggle">Menü</button>
+        <ul class="nav flex-column d-none d-md-block" id="menuItems">
+            <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
+            <li class="nav-item"><a href="co2-emissionsdata.html" class="nav-link text-white">CO2-Emissionsdaten</a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link text-white">Über uns</a></li>
+        </ul>
+    </nav>
+
+    <main class="container pt-5 mt-3">
+        <div>
+            <nav id="content">
+                <article id="article">
+                    <p>
+                        Als weltweit engagierte Non-Profit-Organisation im Kampf gegen den Klimawandel präsentieren wir
+                        auf
+                        dieser Plattform aktuelle Daten
+                        zu den jährlichen CO₂-Emissionen – aufgeschlüsselt nach Ländern und den einflussreichsten
+                        Unternehmen. Unser Ziel ist es,
+                        Transparenz zu schaffen, Bewusstsein zu fördern und fundierte Entscheidungen zu ermöglichen. Nur
+                        wenn wir wissen, wer am meisten zur
+                        Klimakrise beiträgt, können wir gemeinsam gezielt handeln.
+                    </p>
+                </article>
+                <article id="article">
+                    <h2>Treibhausgase, welche für den Klimawandel verantwortlich sind</h2>
+                    <nav>
+                        <ul class="ps-5">
+                            <li>Kohlendioxid</li>
+                            <li>Methan</li>
+                            <li>Distickstoffmonxid</li>
+                            <li>Fluorierte Gase (F-Gase)</li>
+                    </nav>
+                    </ul>
+                </article>
+                <article id="article">
+                    <h2>Aktueller Stand der Treibhausgas-Emissionen</h2>
+                    <p>
+                        Die weltweiten Treibhausgas-Emissionen steigen weiterhin – und erreichen immer neue Rekordwerte.
+                        Laut EDGAR lag der globale Ausstoß
+                        2023 bei rund 53 Gt CO₂‑Äquivalent, ein Anstieg von +1,9 % gegenüber 2022.<br>
+                        Besonders fossile CO₂-Emissionen sind der Haupttreiber – sie machen 73,7 % der gesamten
+                        Emissionen
+                        aus, gefolgt von Methan (~18,9 %),
+                        Lachgas (~4,7 %) und F‑Gasen (~2,7 %). Laut IEA erreichten auch die CO₂-Emissionen aus dem
+                        Energiesektor 2024 mit 37,8 Gt einen
+                        Rekordwert und stiegen um rund 0,8 % gegenüber dem Vorjahr. Vermehrte Nutzung von Erdgas
+                        (+2,5 %)
+                        und Kohle (+0,9 %) sowie erhöhte
+                        Nachfrage in Schwellenländern waren dabei die treibenden Faktoren.<br>
+                        Im Gegenzug zeigen Klimaschwankungsdaten erste Anzeichen einer Verlangsamung des
+                        Emissionswachstums,
+                        aber ein Rückgang ist bisher
+                        nicht in Sicht. CO₂-Konzentrationen in der Atmosphäre steigen weiterhin: im April 2025 wurden
+                        426,8 ppm gemessen, gegenüber 423,9 ppm
+                        im April 2024.
+                    </p>
+                </article>
+                <article id="article">
+                    <h2>Weltweite Treibhausgas-Emissionen von 2010 bis 2023</h2>
+                    <img src="images/treibhausgas_emissionen_2010_2023.png"
+                        alt="Weltweite Treibhausgas-Emissionen seit 2010" width="400" />
+                    <p>
+                        Das Diagramm zeigt die weltweiten Treibhausgas-Emissionen von 2010 bis 2023, in Gigatonnen
+                        CO2-Äquivalent. Insgesamt ist der Trend steigend.
+                        Rund um 2020 gab es aufgrund der Pandemie eine geringfügige Schwankung.
+                    </p>
+                </article>
+            </nav>
+        </div>
+
+        <nav id="content">
+        <h2>CO2-Emissionen</h2>
+        <form>
+            <label for="suche-input">Suchbegriffe:</label>
+            <input type="text" id="suche-input">
+            <button type="button" id="button2">Suchen</button>
+        </form>
+
+        <table id="tabelle-emissionsdaten" class="table table-striped table-bordered table-hover">
+            <caption>CO2-Emissionen nach Ländern und Unternehmen, absteigend</caption>
+            <thead>
+                <tr class="table-info">
+                    <th scope="col">#</th>
+                    <th scope="col">Unternehmen</th>
+                    <th scope="col">Land</th>
+                    <th scope="col">CO2-Emission jährlich in Mio. t</th>
+                </tr>
+            </thead>
+            <tbody class="table-group-divider">
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Toyota Motor</td>
+                    <td>Japan</td>
+                    <td>1.730</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Amazon</td>
+                    <td>USA</td>
+                    <td>1.350</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Huawei Technologies</td>
+                    <td>China</td>
+                    <td>1.330</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>Google</td>
+                    <td>USA</td>
+                    <td>1.290</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>BMW Group</td>
+                    <td>Deutschland</td>
+                    <td>1.210</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>Microsoft</td>
+                    <td>USA</td>
+                    <td>1.140</td>
+                </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td>Siemens AG</td>
+                    <td>Deutschland</td>
+                    <td>1.130</td>
+                </tr>
+                <tr>
+                    <th scope="row">8</th>
+                    <td>Volkswagen</td>
+                    <td>Deutschland</td>
+                    <td>950</td>
+                </tr>
+                <tr>
+                    <th scope="row">9</th>
+                    <td>Meta Platforms</td>
+                    <td>USA</td>
+                    <td>940</td>
+                </tr>
+                <tr>
+                    <th scope="row">10</th>
+                    <td>BP</td>
+                    <td>Vereinigtes Königreich</td>
+                    <td>910</td>
+                </tr>
+                <tr>
+                    <th scope="row">11</th>
+                    <td>Apple</td>
+                    <td>USA</td>
+                    <td>870</td>
+                </tr>
+                <tr>
+                    <th scope="row">12</th>
+                    <td>Nestlé</td>
+                    <td>Schweiz</td>
+                    <td>870</td>
+                </tr>
+                <tr>
+                    <th scope="row">13</th>
+                    <td>Shell</td>
+                    <td>Vereinigtes Königreich</td>
+                    <td>780</td>
+                </tr>
+                <tr>
+                    <th scope="row">14</th>
+                    <td>Glencore</td>
+                    <td>Schweiz</td>
+                    <td>625</td>
+                </tr>
+                <tr>
+                    <th scope="row">15</th>
+                    <td>Samsung Electronics</td>
+                    <td>Südkorea</td>
+                    <td>560</td>
+                </tr>
+                <tr>
+                    <th scope="row">16</th>
+                    <td>Rigips</td>
+                    <td>Österreich</td>
+                    <td>250</td>
+                </tr>
+            </tbody>
+        </table>
         </nav>
-    </div>
-
-    <main>
-        
     </main>
+    <script type="text/javascript" src="jscript.js"></script>
 
-    <footer>
-        <nav>
+    <footer class="container pt-5 mt-3">
+        <div>
+        <nav id="footer">
             <ul>
+                <p>2025 Klimabilanz365</p>
                 <li><a href="privacy.html">Datenschutz</a></li>
                 <li><a href="imprint.html">Impressum</a></li>
             </ul>
         </nav>
+        </div>
     </footer>
 </body>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    // Menü Toggle für mobile Geräte
+    const toggleBtn = document.getElementById('menuToggle');
+    const menuItems = document.getElementById('menuItems');
+
+    toggleBtn.addEventListener('click', () => {
+        menuItems.classList.toggle('d-none');
+    });
+
+    // Schreibrichtung prüfen und Menü rechts positionieren, falls rtl
+    if (document.documentElement.dir === 'rtl') {
+        document.getElementById('menu').classList.remove('start-0');
+        document.getElementById('menu').classList.add('end-0');
+    }
+</script>
 
 </html>
