--- a/about.html
+++ b/about.html
@@ -3,20 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Über uns</title>
-</head>
-<body>
-    <div class="link">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="co2-emissionsdata.html">CO2-Emissionsdaten</a></li>
-                <li><a href="about.html">Über uns</a></li>
-            </ul>
-        </nav>
-    </div>
+    <title>Co2-Footprint</title>
 
-<main>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <!-- Zugriff auf Bootstrap -->
+    <link rel="stylesheet" href="styles.css" /> <!-- Zugriff auf CSS-Datei -->
+</head>
+
+<body>
+    <!-- Header:
+     Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten (am Seitenanfang): -->
+    <header class="bg-info-subtle py-3 fixed-top">
+        <div class="container">
+            <nav id="firmenname"> <!-- id, um auf den richtigen Teil in der styles.css zu verweisen -->
+                <div class="row align-items-start">
+                    <div class="col">
+                        <!-- Überschrift 1, Klasse: Abstand unterhalb der Überschrift, Schriftfarbe, responsiv: -->
+                        <h1 class="text-black-50 mb-0 fs-2 fs-md-1">Klimabilanz365</h1>
+                        <!-- Überschrift 2, Klasse: Anpassung der Überschrifts-Schriftgröße, Schriftfarbe, responsiv: -->
+                        <h2 class="text-black-50 fs-6 fs-md-4">Der CO2-Footprint</h2>
+                    </div>
+                    <!-- Logo rechtsbündig oben, Spalte nimmt nur so viel Platz ein, wie der Inhalt benötigt, responsiv: -->
+                    <div class="col-auto text-end">
+                        <img src="images/Logo-Klimabilanz365.png" class="img-fluid" style="max-width: 150px;"
+                            alt="Bild Logo" />
+                    </div>
+                </div>
+            </nav>
+
+            <nav class="navbar"> <!-- Angabe für responsives Design -->
+                <!-- horizontale Liste, Mittig der Webseite, mit Verweisen auf Instagram, Facebook und den Kontaktdaten der Firma: -->
+                <ul class="list-inline justify-content-center mx-auto">
+                    <li class="list-inline-item"><a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
+                    <li class="list-inline-item"><a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
+                    <li class="list-inline-item"><a href="contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Menü: 
+     CSS - um das Menü je nach Schriftkultur rechts oder links anzeigen zu lassen;
+     Hintergrund- & Schriftfarbe definiert, Position fixiert, Abstände, responsives Design: -->
+    <nav id="menu" class="bg-success-subtle text-secondary position-fixed start-0 p-3 d-flex flex-column">
+        <button class="btn btn-light d-md-none mb-3" id="menuToggle">Menü</button>
+        <ul class="nav flex-column d-none d-md-block" id="menuItems">
+            <li class="nav-item"><a href="index.html" class="nav-link text-secondary-emphasis">Home</a></li>
+            <li class="nav-item"><a href="#emissionen" class="nav-link text-secondary-emphasis">CO2-Emissionsdaten</a>
+            </li>
+            <li class="nav-item"><a href="about.html" class="nav-link text-secondary-emphasis">Über uns</a></li>
+        </ul>
+    </nav>
+
+    <main class="container pt-5 mt-3">
+        <div>
+            <nav id="content"> <!-- Verknüpfung zur CSS Datei -->
     <h2>Über uns</h2>
     <p>
         Willkommen bei uns! Wir sind ein engagiertes Team mit einer gemeinsamen Vision: Qualität, Innovation und 
@@ -28,5 +70,23 @@
     </p>
 </main>
 
+    <!-- Fußzeile: 
+     Ausrichtung in Container & Spalten:  -->
+    <footer class="container pt-5 mt-3 stiky-bottom">
+        <div>
+            <nav id="footer"> <!-- Verknüpfung zur CSS-Datei -->
+                <ul>
+                    <p>2025 Klimabilanz365</p>
+                    <!-- Links zu den weiteren HTML-Dateien "Datenschutz" und "Impressum": -->
+                    <li><a href="privacy.html">Datenschutz</a></li>
+                    <li><a href="imprint.html">Impressum</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+
 </body>
+
+<script src="jscript.js"></script>
+
 </html>
