--- a/--index 11.09.html
+++ b/--index 11.09.html
@@ -9,14 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <!-- Zugriff auf Bootstrap -->
+    <link rel="stylesheet" href="styles.css" /> <!-- Zugriff auf CSS-Datei -->
 </head>
 
-<body class="d-flex flex-column min-vh-100">
+<body>
     <!-- Header:
      Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten (am Seitenanfang): -->
-    <header class="py-3 sticky-top" style="background-color: #e3f2fd;">
+    <header class="bg-info-subtle py-3 fixed-top">
         <div class="container">
-            <nav id="firmenname" dir="ltr"> <!-- id, um auf den richtigen Teil in der styles.css zu verweisen -->
+            <nav id="firmenname"> <!-- id, um auf den richtigen Teil in der styles.css zu verweisen -->
                 <div class="row align-items-start">
                     <div class="col">
                         <!-- Überschrift 1, Klasse: Abstand unterhalb der Überschrift, Schriftfarbe, responsiv: -->
@@ -43,27 +44,27 @@
         </div>
     </header>
 
-            <!-- Menü: 
+    <!-- Menü: 
      CSS - um das Menü je nach Schriftkultur rechts oder links anzeigen zu lassen;
      Hintergrund- & Schriftfarbe definiert, Position fixiert, Abstände, responsives Design: -->
-     <nav id="menu" style="background-color: #d1dee7;">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#emissionen">CO2-Emissionsdaten</a></li>
-            <li><a href="about.html">Über uns</a></li>
+    <nav id="menu" class="bg-success-subtle text-secondary position-fixed start-0 p-3 d-flex flex-column">
+        <button class="btn btn-light d-md-none mb-3" id="menuToggle">Menü</button>
+        <ul class="nav flex-column d-none d-md-block" id="menuItems">
+            <li class="nav-item"><a href="index.html" class="nav-link text-secondary-emphasis">Home</a></li>
+            <li class="nav-item"><a href="#emissionen" class="nav-link text-secondary-emphasis">CO2-Emissionsdaten</a>
+            </li>
+            <li class="nav-item"><a href="about.html" class="nav-link text-secondary-emphasis">Über uns</a></li>
         </ul>
     </nav>
 
 
     <!-- Main Teil:
      wird in Containern / Spalten ausgerichtet: -->
-    <main class="flex-grow-1">
-
-        <div dir="ltr">
+    <main class="container pt-5 mt-3">
+        <div>
             <nav id="content"> <!-- Verknüpfung zur CSS Datei -->
                 <!-- Artikel 1, ohne Überschrift, nur Absatz: -->
-                <br>
-                <article id="article1" class="col-lg-12 col-md-12 col-sm-12">
+                <article id="article1">
                     <p>
                         Als weltweit engagierte Non-Profit-Organisation im Kampf gegen den Klimawandel präsentieren wir
                         auf
@@ -72,18 +73,18 @@
                         Unternehmen. Unser Ziel ist es,
                         Transparenz zu schaffen, Bewusstsein zu fördern und fundierte Entscheidungen zu ermöglichen. Nur
                         wenn wir wissen, wer am meisten zur
-                        Klimakrise beiträgt, können wir gemeinsam gezielt handeln.<br><br>
+                        Klimakrise beiträgt, können wir gemeinsam gezielt handeln.
                     </p>
                 </article>
                 <!-- Artikel 2, mit Überschrift und Aufzählungen: -->
                 <article id="article2">
                     <h2>Treibhausgase, welche für den Klimawandel verantwortlich sind</h2>
                     <nav>
-                        <ul class="ps-5" dir="ltr">
+                        <ul class="ps-5">
                             <li>Kohlendioxid</li>
                             <li>Methan</li>
                             <li>Distickstoffmonxid</li>
-                            <li>Fluorierte Gase (F-Gase)</li><br><br>
+                            <li>Fluorierte Gase (F-Gase)</li>
                     </nav>
                     </ul>
                 </article>
@@ -108,7 +109,7 @@
                         aber ein Rückgang ist bisher
                         nicht in Sicht. CO₂-Konzentrationen in der Atmosphäre steigen weiterhin: im April 2025 wurden
                         426,8 ppm gemessen, gegenüber 423,9 ppm
-                        im April 2024.<br><br>
+                        im April 2024.
                     </p>
                 </article>
                 <!-- Artikel 4, mit Überschrift, Abbildung der CO2-Emissionen und Absatz: -->
@@ -120,14 +121,14 @@
                     <p>
                         Das Diagramm zeigt die weltweiten Treibhausgas-Emissionen von 2010 bis 2023, in Gigatonnen
                         CO2-Äquivalent. Insgesamt ist der Trend steigend.
-                        Rund um 2020 gab es aufgrund der Pandemie eine geringfügige Schwankung.<br><br>
+                        Rund um 2020 gab es aufgrund der Pandemie eine geringfügige Schwankung.
                     </p>
                 </article>
             </nav>
         </div>
 
         <!-- Tabelle, inkl. Such- & Filterfunktion: -->
-        <nav id="content" dir="ltr"> <!-- Verknüpfung zur CSS Datei -->
+        <nav id="content"> <!-- Verknüpfung zur CSS Datei -->
             <h2 id="emissionen">CO2-Emissionen</h2>
             <div class="container"> <!-- wird in Containern / Spalten ausgerichtet -->
                 <nav>
@@ -162,7 +163,7 @@
             </div>
 
             <!-- Tabelle für CO2-Emissionen, farblich angepasst -->
-            <table id="tabelle-emissionsdaten" class="table table-striped table-bordered table-hover" dir="ltr">
+            <table id="tabelle-emissionsdaten" class="table table-striped table-bordered table-hover">
                 <caption>CO2-Emissionen nach Ländern und Unternehmen, CO2-Emission jährlich in Mio. t absteigend
                 </caption>
                 <thead>
@@ -283,14 +284,14 @@
 
     <!-- Fußzeile: 
      Ausrichtung in Container & Spalten:  -->
-    <footer class="mt-auto" style="background-color: #d1dee7;" dir="ltr">
+    <footer class="container pt-5 mt-3 stiky-bottom">
         <div>
-            <nav id="footer" class="navbar">
-                <ul class="list-inline justify-content-center mx-auto">
-                    <li class="list-inline-item">2025 Klimabilanz365</li>
+            <nav id="footer"> <!-- Verknüpfung zur CSS-Datei -->
+                <ul>
+                    <p>2025 Klimabilanz365</p>
                     <!-- Links zu den weiteren HTML-Dateien "Datenschutz" und "Impressum": -->
-                    <li class="list-inline-item"><a href="privacy.html">Datenschutz</a></li>
-                    <li class="list-inline-item"><a href="imprint.html">Impressum</a></li>
+                    <li><a href="privacy.html">Datenschutz</a></li>
+                    <li><a href="imprint.html">Impressum</a></li>
                 </ul>
             </nav>
         </div>
