--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <!-- Zugriff auf Bootstrap -->
-    <link rel="stylesheet" href="styles.css" /> <!-- Zugriff auf CSS-Datei -->
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- Header:
      Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten (am Seitenanfang): -->
-    <header class="bg-info-subtle py-3 fixed-top">
+    <header class="py-3 sticky-top" style="background-color: #e3f2fd;">
         <div class="container">
-            <nav id="firmenname"> <!-- id, um auf den richtigen Teil in der styles.css zu verweisen -->
+            <nav id="firmenname" dir="ltr"> <!-- id, um auf den richtigen Teil in der styles.css zu verweisen -->
                 <div class="row align-items-start">
                     <div class="col">
                         <!-- Überschrift 1, Klasse: Abstand unterhalb der Überschrift, Schriftfarbe, responsiv: -->
@@ -43,36 +43,51 @@
         </div>
     </header>
 
-    <!-- Menü: 
+            <!-- Menü: 
      CSS - um das Menü je nach Schriftkultur rechts oder links anzeigen zu lassen;
      Hintergrund- & Schriftfarbe definiert, Position fixiert, Abstände, responsives Design: -->
-    <nav id="menu" class="bg-success-subtle text-secondary position-fixed start-0 p-3 d-flex flex-column">
-        <button class="btn btn-light d-md-none mb-3" id="menuToggle">Menü</button>
-        <ul class="nav flex-column d-none d-md-block" id="menuItems">
-            <li class="nav-item"><a href="index.html" class="nav-link text-secondary-emphasis">Home</a></li>
-            <li class="nav-item"><a href="#emissionen" class="nav-link text-secondary-emphasis">CO2-Emissionsdaten</a>
-            </li>
-            <li class="nav-item"><a href="about.html" class="nav-link text-secondary-emphasis">Über uns</a></li>
+     <nav id="menu" style="background-color: #d1dee7;">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#emissionen">CO2-Emissionsdaten</a></li>
+            <li><a href="about.html">Über uns</a></li>
         </ul>
     </nav>
 
-    <main class="container pt-5 mt-3">
-        <div>
-            <nav id="content"> <!-- Verknüpfung zur CSS Datei -->
-    <h2>Über uns</h2>
-    <p>
-        Willkommen bei uns! Wir sind ein engagiertes Team mit einer gemeinsamen Vision: Qualität, Innovation und 
-        Vertrauen in allem, was wir tun. Mit Leidenschaft und Fachwissen setzen wir uns täglich dafür ein, unseren 
-        Kundinnen und Kunden nicht nur Produkte oder Dienstleistungen zu bieten, sondern echte Lösungen. Unsere 
-        Werte basieren auf Offenheit, Nachhaltigkeit und dem festen Glauben daran, dass Zusammenarbeit der 
-        Schlüssel zu langfristigem Erfolg ist. Lernen Sie uns kennen – wir freuen uns darauf, gemeinsam mit Ihnen 
-        neue Wege zu gehen.
-    </p>
-</main>
+    <!-- Menü: 
+     CSS - um das Menü je nach Schriftkultur rechts oder links anzeigen zu lassen;
+     Hintergrund- & Schriftfarbe definiert, Position fixiert, Abstände, responsives Design: -->
+    <nav id="menu" class="bg-light">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#emissionen">CO2-Emissionsdaten</a></li>
+            <li><a href="about.html">Über uns</a></li>
+        </ul>
+    </nav>
+
+    <main class="flex-grow-1">
+
+        <div dir="ltr">
+            <nav id="content">
+
+                <h2>Über uns</h2>
+                <p>
+                    Willkommen bei uns! Wir sind ein engagiertes Team mit einer gemeinsamen Vision: Qualität, Innovation
+                    und
+                    Vertrauen in allem, was wir tun. Mit Leidenschaft und Fachwissen setzen wir uns täglich dafür ein,
+                    unseren
+                    Kundinnen und Kunden nicht nur Produkte oder Dienstleistungen zu bieten, sondern echte Lösungen.
+                    Unsere
+                    Werte basieren auf Offenheit, Nachhaltigkeit und dem festen Glauben daran, dass Zusammenarbeit der
+                    Schlüssel zu langfristigem Erfolg ist. Lernen Sie uns kennen – wir freuen uns darauf, gemeinsam mit
+                    Ihnen
+                    neue Wege zu gehen.
+                </p>
+    </main>
 
     <!-- Fußzeile: 
      Ausrichtung in Container & Spalten:  -->
-    <footer class="container pt-5 mt-3 stiky-bottom">
+    <footer class="mt-auto" dir="ltr">
         <div>
             <nav id="footer"> <!-- Verknüpfung zur CSS-Datei -->
                 <ul>
