--- a/imprint.html
+++ b/imprint.html
@@ -3,19 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impressum</title>
-</head>
-<body>
-    <div class="link">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="co2-emissionsdata.html">CO2-Emissionsdaten</a></li>
-                <li><a href="about.html">Über uns</a></li>
-            </ul>
-        </nav>
-    </div>
+    <title>Co2-Footprint</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <!-- Zugriff auf Bootstrap -->
+</head>
+
+<body class="d-flex flex-column min-vh-100">
+    <!-- Header:
+     Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten (am Seitenanfang): -->
+    <header class="py-3 sticky-top" style="background-color: #e3f2fd;">
+        <div class="container">
+            <nav id="firmenname" dir="ltr"> <!-- id, um auf den richtigen Teil in der styles.css zu verweisen -->
+                <div class="row align-items-start">
+                    <div class="col">
+                        <!-- Überschrift 1, Klasse: Abstand unterhalb der Überschrift, Schriftfarbe, responsiv: -->
+                        <h1 class="text-black-50 mb-0 fs-2 fs-md-1">Klimabilanz365</h1>
+                        <!-- Überschrift 2, Klasse: Anpassung der Überschrifts-Schriftgröße, Schriftfarbe, responsiv: -->
+                        <h2 class="text-black-50 fs-6 fs-md-4">Der CO2-Footprint</h2>
+                    </div>
+                    <!-- Logo rechtsbündig oben, Spalte nimmt nur so viel Platz ein, wie der Inhalt benötigt, responsiv: -->
+                    <div class="col-auto text-end">
+                        <img src="images/Logo-Klimabilanz365.png" class="img-fluid" style="max-width: 150px;"
+                            alt="Bild Logo" />
+                    </div>
+                </div>
+            </nav>
+
+            <nav class="navbar"> <!-- Angabe für responsives Design -->
+                <!-- horizontale Liste, Mittig der Webseite, mit Verweisen auf Instagram, Facebook und den Kontaktdaten der Firma: -->
+                <ul class="list-inline justify-content-center mx-auto">
+                    <li class="list-inline-item"><a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
+                    <li class="list-inline-item"><a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
+                    <li class="list-inline-item"><a href="contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+            <!-- Menü: 
+     CSS - um das Menü je nach Schriftkultur rechts oder links anzeigen zu lassen;
+     Hintergrund- & Schriftfarbe definiert, Position fixiert, Abstände, responsives Design: -->
+     <nav id="menu" style="background-color: #d1dee7;">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#emissionen">CO2-Emissionsdaten</a></li>
+            <li><a href="about.html">Über uns</a></li>
+        </ul>
+    </nav>
+    
     <main>
         <section>
             <h2>Impressum</h2>
