--- a/privacy.html
+++ b/privacy.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Co2-Footprint</title>
-
+    <!-- Zugriff auf Bootstrap: -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <!-- Zugriff auf Bootstrap -->
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -15,7 +14,7 @@
      Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten (am Seitenanfang): -->
     <header class="py-3 sticky-top" style="background-color: #e3f2fd;">
         <div class="container">
-            <nav id="firmenname" dir="ltr"> <!-- id, um auf den richtigen Teil in der styles.css zu verweisen -->
+            <nav dir="ltr">
                 <div class="row align-items-start">
                     <div class="col">
                         <!-- Überschrift 1, Klasse: Abstand unterhalb der Überschrift, Schriftfarbe, responsiv: -->
@@ -32,7 +31,8 @@
             </nav>
 
             <nav class="navbar"> <!-- Angabe für responsives Design -->
-                <!-- horizontale Liste, Mittig der Webseite, mit Verweisen auf Instagram, Facebook und den Kontaktdaten der Firma: -->
+                <!-- Globale Navigation: 
+                 horizontale Liste, Mittig der Webseite, mit Verweisen auf Instagram, Facebook und den Kontaktdaten der Firma: -->
                 <ul class="list-inline justify-content-center mx-auto">
                     <li class="list-inline-item"><a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
                     <li class="list-inline-item"><a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
@@ -42,10 +42,8 @@
         </div>
     </header>
 
-            <!-- Menü: 
-     CSS - um das Menü je nach Schriftkultur rechts oder links anzeigen zu lassen;
-     Hintergrund- & Schriftfarbe definiert, Position fixiert, Abstände, responsives Design: -->
-     <nav id="menu" style="background-color: #d1dee7;">
+    <!-- Menü - Hintergrundfarbe definiert: -->
+    <nav id="menu" style="background-color: #d1dee7;">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#emissionen">CO2-Emissionsdaten</a></li>
