--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten (am Seitenanfang): -->
     <header class="py-3 sticky-top" style="background-color: #e3f2fd;">
         <div class="container">
+            <!-- Ausrichtung ist immer Linksbündig, egal welche Schriftkultur: -->
             <nav dir="ltr">
                 <div class="row align-items-start">
                     <div class="col">
@@ -53,9 +54,10 @@
     </nav>
 
 
-    <!-- Main Teil - wird in Containern / Spalten ausgerichtet: -->
+    <!-- Main Teil - wird in Containern / Spalten ausgerichtet:
+        nimmt ganze Seite ein, damit der Footer ganz unten am Seitenrand angezeigt wird -->
     <main class="flex-grow-1">
-        <!-- Main-Teil nimmt ganze Seite ein, damit der Footer ganz unten am Seitenrand angezeigt wird -->
+        <!-- Ausrichtung ist immer Linksbündig, egal welche Schriftkultur: -->
         <div dir="ltr">
             <nav>
                 <!-- Artikel 1, ohne Überschrift, nur Absatz: -->
