--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,11 @@
                 Österreich
             </p>
             <!-- E-Mail-Adresse & Telefonnummer inkl. Bildern zur Definition: -->
-            <img src="images/e-mail.png" class="float-start ps-3" style="max-width: 60px" alt="E-Mail" />
+            <img src="images/e-mail.png" class="float-start ps-3" style="max-width: 60px" 
+            alt="E-Mail" />
             <p>klimabilanz365@gmail.com</p>
-            <img src="images/telefon.png" class="float-start ps-3" style="max-width: 60px" alt="Telefonnummer" />
+            <img src="images/telefon.png" class="float-start ps-3" style="max-width: 60px" 
+            alt="Telefonnummer" />
             <p>+43 1234 / 56780</p>
         </section>
 
