--- a/imprint.html
+++ b/imprint.html
@@ -62,8 +62,8 @@
             <h2>Impressum</h2>
             <p id="informationsplicht">
                 <strong> <!-- Schrift fett -->
-                    Informationspflicht gemäß § 5 E-Commerce-Gesetz, § 14 Unternehmensgesetzbuch, § 63
-                    Gewerbeordnung und Offenlegungspflicht laut § 25 Mediengesetz<br>
+                    Informationspflicht gemäß § 5 E-Commerce-Gesetz, § 14 Unternehmensgesetzbuch, 
+                    § 63 Gewerbeordnung und Offenlegungspflicht laut § 25 Mediengesetz<br>
                     <br>
                     Klimabilanz365 – Der CO2-Footprint
                 </strong>
@@ -94,13 +94,14 @@
             </p>
             <h2>Haftungsausschluss:</h2>
             <p>
-                Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für Inhalte externer
-                Links. Für den Inhalt verlinkter Seiten sind ausschließlich deren Betreiber verantwortlich.
+                Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für 
+                Inhalte externer Links. Für den Inhalt verlinkter Seiten sind ausschließlich 
+                deren Betreiber verantwortlich.
             </p>
             <h2>Urheberrecht:</h2>
             <p>
-                Die Inhalte dieser Website unterliegen dem Urheberrecht. Jegliche Verwendung, Vervielfältigung
-                oder Verbreitung ist nur mit ausdrücklicher Genehmigung zulässig.
+                Die Inhalte dieser Website unterliegen dem Urheberrecht. Jegliche Verwendung, 
+                Vervielfältigung oder Verbreitung ist nur mit ausdrücklicher Genehmigung zulässig.
             </p>
         </section>
     </main>
