--- a/about.html
+++ b/about.html
@@ -62,16 +62,15 @@
             <nav id="content">
                 <h2>Über uns</h2>
                 <p>
-                    Willkommen bei uns! Wir sind ein engagiertes Team mit einer gemeinsamen Vision: Qualität, Innovation
-                    und
-                    Vertrauen in allem, was wir tun. Mit Leidenschaft und Fachwissen setzen wir uns täglich dafür ein,
-                    unseren
-                    Kundinnen und Kunden nicht nur Produkte oder Dienstleistungen zu bieten, sondern echte Lösungen.
-                    Unsere
-                    Werte basieren auf Offenheit, Nachhaltigkeit und dem festen Glauben daran, dass Zusammenarbeit der
-                    Schlüssel zu langfristigem Erfolg ist. Lernen Sie uns kennen – wir freuen uns darauf, gemeinsam mit
-                    Ihnen
-                    neue Wege zu gehen.
+                    Willkommen bei uns! Wir sind ein engagiertes Team mit einer gemeinsamen 
+                    Vision: Qualität, Innovation und Vertrauen in allem, was wir tun. Mit
+                    Leidenschaft und Fachwissen setzen wir uns täglich dafür ein, unseren
+                    Kundinnen und Kunden nicht nur Produkte oder Dienstleistungen zu bieten, 
+                    sondern echte Lösungen.
+                    Unsere Werte basieren auf Offenheit, Nachhaltigkeit und dem festen Glauben 
+                    daran, dass Zusammenarbeit der Schlüssel zu langfristigem Erfolg ist. 
+                    Lernen Sie uns kennen – wir freuen uns darauf, gemeinsam mit Ihnen neue 
+                    Wege zu gehen.
                 </p>
     </main>
 
