--- a/index.html
+++ b/index.html
@@ -6,39 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Co2-Footprint</title>
     <!-- Zugriff auf Bootstrap: -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous" />
 </head>
 
 <body class="d-flex flex-column min-vh-100">
     <!-- Header:
-     Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten (am Seitenanfang): -->
+     Angabe der Hintergrundfarbe, Schriftfarbe, Ausrichtung in Container & Spalten 
+     am Seitenanfang): -->
     <header class="py-3 sticky-top" style="background-color: #e3f2fd;">
         <div class="container">
             <!-- Ausrichtung ist immer Linksbündig, egal welche Schriftkultur: -->
             <nav dir="ltr">
                 <div class="row align-items-start">
                     <div class="col">
-                        <!-- Überschrift 1, Klasse: Abstand unterhalb der Überschrift, Schriftfarbe, responsiv: -->
+                        <!-- Überschrift 1, Klasse: Abstand unterhalb der Überschrift, 
+                         Schriftfarbe, responsiv: -->
                         <h1 class="text-black-50 mb-0 fs-2 fs-md-1">Klimabilanz365</h1>
-                        <!-- Überschrift 2, Klasse: Anpassung der Überschrifts-Schriftgröße, Schriftfarbe, responsiv: -->
+                        <!-- Überschrift 2, Klasse: Anpassung der Überschrifts-
+                         Schriftgröße, Schriftfarbe, responsiv: -->
                         <h2 class="text-black-50 fs-6 fs-md-4">Der CO2-Footprint</h2>
                     </div>
-                    <!-- Logo rechtsbündig oben, Spalte nimmt nur so viel Platz ein, wie der Inhalt benötigt, responsiv: -->
+                    <!-- Logo rechtsbündig oben, Spalte nimmt nur so viel Platz ein, 
+                     wie der Inhalt benötigt, responsiv: -->
                     <div class="col-auto text-end">
-                        <img src="images/Logo-Klimabilanz365.png" class="img-fluid" style="max-width: 150px;"
-                            alt="Bild Logo" />
+                        <img src="images/Logo-Klimabilanz365.png" class="img-fluid" 
+                        style="max-width: 150px;"
+                        alt="Bild Logo" />
                     </div>
                 </div>
             </nav>
 
             <nav class="navbar"> <!-- Angabe für responsives Design -->
                 <!-- Globale Navigation: 
-                 horizontale Liste, Mittig der Webseite, mit Verweisen auf Instagram, Facebook und den Kontaktdaten der Firma: -->
+                 horizontale Liste, Mittig der Webseite, mit Verweisen auf Instagram, 
+                 Facebook und den Kontaktdaten der Firma: -->
                 <ul class="list-inline justify-content-center mx-auto">
-                    <li class="list-inline-item"><a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
-                    <li class="list-inline-item"><a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
-                    <li class="list-inline-item"><a href="contact.html">Kontakt</a></li>
+                    <li class="list-inline-item">
+                        <a href="https://www.instagram.com/Klimabilanz365">Instagram</a></li>
+                    <li class="list-inline-item">
+                        <a href="https://www.facebook.com/Klimabilanz365">Facebook</a></li>
+                    <li class="list-inline-item">
+                        <a href="contact.html">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
@@ -64,21 +75,21 @@
                 <br> <!-- Zeilenumbruch für größeren Abstand zum vorherigen Teil -->
                 <article id="article1">
                     <p>
-                        Als weltweit engagierte Non-Profit-Organisation im Kampf gegen den Klimawandel präsentieren wir
-                        auf
-                        dieser Plattform aktuelle Daten
-                        zu den jährlichen CO₂-Emissionen – aufgeschlüsselt nach Ländern und den einflussreichsten
-                        Unternehmen. Unser Ziel ist es,
-                        Transparenz zu schaffen, Bewusstsein zu fördern und fundierte Entscheidungen zu ermöglichen. Nur
-                        wenn wir wissen, wer am meisten zur
-                        Klimakrise beiträgt, können wir gemeinsam gezielt handeln.<br>
+                        Als weltweit engagierte Non-Profit-Organisation im Kampf gegen den 
+                        Klimawandel präsentieren wir auf dieser Plattform aktuelle Daten
+                        zu den jährlichen CO₂-Emissionen – aufgeschlüsselt nach Ländern und 
+                        den einflussreichsten Unternehmen. Unser Ziel ist es, Transparenz zu 
+                        schaffen, Bewusstsein zu fördern und fundierte Entscheidungen zu 
+                        ermöglichen. Nur wenn wir wissen, wer am meisten zur Klimakrise
+                        beiträgt, können wir gemeinsam gezielt handeln.<br>
                     </p>
                 </article>
                 <!-- Artikel 2, mit Überschrift und Aufzählungen: -->
                 <article id="article2">
                     <h2>Treibhausgase, welche für den Klimawandel verantwortlich sind</h2>
                     <nav>
-                        <!-- Auflistung - größerer Seiteneinzug, immer Linksbündig, egal welche Schriftkultur: -->
+                        <!-- Auflistung - größerer Seiteneinzug, immer Linksbündig, egal 
+                         welche Schriftkultur: -->
                         <ul class="ps-5" dir="ltr">
                             <li>Kohlendioxid</li>
                             <li>Methan</li>
@@ -91,24 +102,20 @@
                 <article id="article3">
                     <h2>Aktueller Stand der Treibhausgas-Emissionen</h2>
                     <p>
-                        Die weltweiten Treibhausgas-Emissionen steigen weiterhin – und erreichen immer neue Rekordwerte.
-                        Laut EDGAR lag der globale Ausstoß
-                        2023 bei rund 53 Gt CO₂‑Äquivalent, ein Anstieg von +1,9 % gegenüber 2022.<br>
-                        Besonders fossile CO₂-Emissionen sind der Haupttreiber – sie machen 73,7 % der gesamten
-                        Emissionen
-                        aus, gefolgt von Methan (~18,9 %),
-                        Lachgas (~4,7 %) und F‑Gasen (~2,7 %). Laut IEA erreichten auch die CO₂-Emissionen aus dem
-                        Energiesektor 2024 mit 37,8 Gt einen
-                        Rekordwert und stiegen um rund 0,8 % gegenüber dem Vorjahr. Vermehrte Nutzung von Erdgas
-                        (+2,5 %)
-                        und Kohle (+0,9 %) sowie erhöhte
-                        Nachfrage in Schwellenländern waren dabei die treibenden Faktoren.<br>
+                        Die weltweiten Treibhausgas-Emissionen steigen weiterhin – und erreichen immer 
+                        neue Rekordwerte. Laut EDGAR lag der globale Ausstoß 2023 bei rund 53 Gt 
+                        CO₂‑Äquivalent, ein Anstieg von +1,9 % gegenüber 2022.<br>
+                        Besonders fossile CO₂-Emissionen sind der Haupttreiber – sie machen 73,7 % der 
+                        gesamten Emissionen aus, gefolgt von Methan (~18,9 %), Lachgas (~4,7 %) und 
+                        F‑Gasen (~2,7 %). Laut IEA erreichten auch die CO₂-Emissionen aus dem 
+                        Energiesektor 2024 mit 37,8 Gt einen Rekordwert und stiegen um rund 0,8 % 
+                        gegenüber dem Vorjahr. Vermehrte Nutzung von Erdgas (+2,5 %) und Kohle (+0,9 %) 
+                        sowie erhöhte Nachfrage in Schwellenländern waren dabei die treibenden 
+                        Faktoren.<br>
                         Im Gegenzug zeigen Klimaschwankungsdaten erste Anzeichen einer Verlangsamung des
-                        Emissionswachstums,
-                        aber ein Rückgang ist bisher
-                        nicht in Sicht. CO₂-Konzentrationen in der Atmosphäre steigen weiterhin: im April 2025 wurden
-                        426,8 ppm gemessen, gegenüber 423,9 ppm
-                        im April 2024.<br>
+                        Emissionswachstums, aber ein Rückgang ist bisher nicht in Sicht. 
+                        CO₂-Konzentrationen in der Atmosphäre steigen weiterhin: im April 2025 wurden
+                        426,8 ppm gemessen, gegenüber 423,9 ppm im April 2024.<br>
                     </p>
                 </article>
                 <!-- Artikel 4, mit Überschrift, Abbildung der CO2-Emissionen und Absatz: -->
@@ -118,9 +125,10 @@
                     <img src="images/treibhausgas_emissionen_2010_2023.png" class="img-fluid"
                         alt="Weltweite Treibhausgas-Emissionen seit 2010" />
                     <p>
-                        Das Diagramm zeigt die weltweiten Treibhausgas-Emissionen von 2010 bis 2023, in Gigatonnen
-                        CO2-Äquivalent. Insgesamt ist der Trend steigend.
-                        Rund um 2020 gab es aufgrund der Pandemie eine geringfügige Schwankung.<br><br>
+                        Das Diagramm zeigt die weltweiten Treibhausgas-Emissionen von 2010 bis
+                        2023, in Gigatonnen CO2-Äquivalent. Insgesamt ist der Trend steigend.
+                        Rund um 2020 gab es aufgrund der Pandemie eine geringfügige Schwankung.
+                        <br><br>
                     </p>
                 </article>
             </nav>
@@ -136,7 +144,7 @@
                         <div class="col-12 col-md-4">
                             <p>Nach Unternehmen oder Land suchen:</p>
                             <!-- Textfeld zum Filtern nach Land oder Unternehmen, mit Verweis auf die jscript.js Datei-->
-                            <input type="text" id="filterInput" placeholder="Suche">
+                            <input type="text" id="sucheInput" placeholder="Suche">
                             <p><br></p>
                         </div>
                         <!-- Filtern nach Unternehmen oder Land als Flexbox Columns: -->
@@ -161,9 +169,12 @@
                 </nav>
             </div>
 
-            <!-- Tabelle für CO2-Emissionen, farblich angepasst, Ausrichtung ist immer Linksbündig, egal welche Schriftkultur: -->
-            <table id="tabelle-emissionsdaten" class="table table-striped table-bordered table-hover" dir="ltr">
-                <caption>CO2-Emissionen nach Ländern und Unternehmen, CO2-Emission jährlich in Mio. t absteigend
+            <!-- Tabelle für CO2-Emissionen, farblich angepasst, Ausrichtung ist immer Linksbündig, 
+             egal welche Schriftkultur: -->
+            <table id="tabelle-emissionsdaten" class="table table-striped table-bordered table-hover" 
+            dir="ltr">
+                <caption>
+                    CO2-Emissionen nach Ländern und Unternehmen, CO2-Emission jährlich in Mio. t absteigend
                 </caption>
                 <thead>
                     <!-- Kopfzeile der Tabelle: -->
@@ -281,7 +292,8 @@
         </nav>
     </main>
 
-    <!-- Fußzeile - Ausrichtung in Container & Spalten, Hintergrundfarbe definiert, Ausrichtung ist immer Linksbündig, egal welche Schriftkultur: -->
+    <!-- Fußzeile - Ausrichtung in Container & Spalten, Hintergrundfarbe definiert, 
+     Ausrichtung ist immer Linksbündig, egal welche Schriftkultur: -->
     <footer class="mt-auto" style="background-color: #d1dee7;" dir="ltr">
         <div>
             <nav id="footer" class="navbar">
