--- a/privacy.html
+++ b/privacy.html
@@ -66,10 +66,11 @@
                 </em>
             </p>
             <p>
-                Wir freuen uns über Ihr Interesse an unserem Unternehmen „Klimabilanz365 – Der CO2-Footprint“.
-                Der Schutz Ihrer personenbezogenen Daten ist uns ein besonderes Anliegen. Nachfolgend informieren
-                wir Sie gemäß Art. 13 DSGVO darüber, wie wir Ihre Daten verarbeiten, wenn Sie unsere Website
-                besuchen oder unsere Dienste nutzen.
+                Wir freuen uns über Ihr Interesse an unserem Unternehmen „Klimabilanz365 – Der 
+                CO2-Footprint“. Der Schutz Ihrer personenbezogenen Daten ist uns ein besonderes
+                Anliegen. Nachfolgend informieren wir Sie gemäß Art. 13 DSGVO darüber, wie wir 
+                Ihre Daten verarbeiten, wenn Sie unsere Website besuchen oder unsere Dienste 
+                nutzen.
             </p>
             <h3>1. Verantwortlicher</h3>
             <p>
@@ -83,39 +84,41 @@
             <h3>2. Erhebung und Speicherung personenbezogener Daten</h3>
             <h4>a) Beim Besuch der Website</h4>
             <p>
-                Beim Aufrufen unserer Website werden durch den Webserver automatisch Informationen erfasst, die
-                Ihr Browser übermittelt. Dies sind insbesondere:<br>
+                Beim Aufrufen unserer Website werden durch den Webserver automatisch Informationen
+                erfasst, die Ihr Browser übermittelt. Dies sind insbesondere:<br>
                 IP-Adresse (anonymisiert)<br>
                 Datum und Uhrzeit der Anfrage<br>
                 besuchte Seite / URL<br>
                 Browsertyp und -version<br>
                 Betriebssystem<br>
-                Diese Daten werden zur Gewährleistung eines sicheren Betriebs der Website verarbeitet (berechtigtes
-                Interesse gemäß Art. 6 Abs. 1 lit. f DSGVO) und nicht mit anderen Datenquellen zusammengeführt. Die
-                Logfiles werden regelmäßig gelöscht.
+                Diese Daten werden zur Gewährleistung eines sicheren Betriebs der Website 
+                verarbeitet (berechtigtes Interesse gemäß Art. 6 Abs. 1 lit. f DSGVO) und nicht
+                mit anderen Datenquellen zusammengeführt. Die Logfiles werden regelmäßig gelöscht.
             </p>
             <h4>b) Bei Nutzung von Kontaktformularen oder E-Mail</h4>
             <p>
-                Wenn Sie uns per E-Mail oder Kontaktformular kontaktieren, speichern wir Ihre Angaben (Name,
-                E-Mail-Adresse, ggf. Telefonnummer und Nachricht), um Ihre Anfrage zu bearbeiten (Rechtsgrundlage:
-                Art. 6 Abs. 1 lit. b DSGVO).
+                Wenn Sie uns per E-Mail oder Kontaktformular kontaktieren, speichern wir Ihre 
+                Angaben (Name, E-Mail-Adresse, ggf. Telefonnummer und Nachricht), um Ihre 
+                Anfrage zu bearbeiten (Rechtsgrundlage: Art. 6 Abs. 1 lit. b DSGVO).
             </p>
             <h3>3. Cookies</h3>
             <p>
-                Unsere Website verwendet sogenannte „Cookies“. Das sind kleine Textdateien, die auf Ihrem Endgerät
-                gespeichert werden und keine Viren enthalten. Cookies dienen dazu, unser Angebot nutzerfreundlicher,
-                effektiver und sicherer zu machen.<br>
+                Unsere Website verwendet sogenannte „Cookies“. Das sind kleine Textdateien, die
+                auf Ihrem Endgerät gespeichert werden und keine Viren enthalten. Cookies dienen
+                dazu, unser Angebot nutzerfreundlicher, effektiver und sicherer zu machen.<br>
                 Wir verwenden:<br>
                 Technisch notwendige Cookies (z. B. zur Sprachauswahl oder Navigation)<br>
-                Optionale Cookies (nur nach Ihrer Einwilligung, z. B. für Statistik oder Marketing)<br>
-                Beim ersten Besuch unserer Website fragen wir Sie im Cookie-Banner nach Ihrer Einwilligung. Diese +
-                können Sie jederzeit widerrufen.
+                Optionale Cookies (nur nach Ihrer Einwilligung, z. B. für Statistik oder 
+                Marketing)<br>
+                Beim ersten Besuch unserer Website fragen wir Sie im Cookie-Banner nach Ihrer 
+                Einwilligung. Diese + können Sie jederzeit widerrufen.
             </p>
             <h3>4. Webananlyse und Tools</h3>
             <p>
-                Falls verwendet, können Tools wie Matomo oder Google Analytics zur Reichweitenmessung eingesetzt
-                werden. Diese Dienste setzen Cookies und übermitteln ggf. Daten an Drittländer. Die Nutzung erfolgt
-                ausschließlich auf Basis Ihrer Einwilligung gemäß Art. 6 Abs. 1 lit. a DSGVO.
+                Falls verwendet, können Tools wie Matomo oder Google Analytics zur 
+                Reichweitenmessung eingesetzt werden. Diese Dienste setzen Cookies und 
+                übermitteln ggf. Daten an Drittländer. Die Nutzung erfolgt ausschließlich auf 
+                Basis Ihrer Einwilligung gemäß Art. 6 Abs. 1 lit. a DSGVO.
             </p>
             <h3>5. Ihre Rechte</h3>
             <p>
@@ -127,17 +130,19 @@
                 Datenübertragbarkeit (Art. 20 DSGVO)<br>
                 Widerspruch gegen die Verarbeitung (Art. 21 DSGVO)<br>
                 Widerruf einer erteilten Einwilligung (Art. 7 Abs. 3 DSGVO)<br>
-                Beschwerde bei einer Aufsichtsbehörde (z. B. Datenschutzbehörde Österreich: www.dsb.gv.at)
+                Beschwerde bei einer Aufsichtsbehörde (z. B. Datenschutzbehörde Österreich: 
+                www.dsb.gv.at)
             </p>
             <h3>6. Datensicherheit</h3>
             <p>
-                Wir setzen technische und organisatorische Sicherheitsmaßnahmen ein, um Ihre Daten gegen Manipulation,
+                Wir setzen technische und organisatorische Sicherheitsmaßnahmen ein, um Ihre 
+                Daten gegen Manipulation,
                 Verlust, Zerstörung oder unbefugten Zugriff zu schützen.
             </p>
             <h3>7. Änderung dieser Datenschutzerklärung</h3>
             <p>
-                Wir behalten uns vor, diese Datenschutzerklärung gelegentlich anzupassen, damit sie stets den aktuellen
-                rechtlichen Anforderungen entspricht.
+                Wir behalten uns vor, diese Datenschutzerklärung gelegentlich anzupassen, damit
+                sie stets den aktuellen rechtlichen Anforderungen entspricht.
             </p>
         </section>
     </main>
